--- a/src/ServerlessTestApi.Core/ServerlessTestApi.Core.csproj
+++ b/src/ServerlessTestApi.Core/ServerlessTestApi.Core.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>ServerlessTestApi.Core</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Domain\" />
+  </ItemGroup>
+
 </Project>
